<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <!-- Back -->

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_margin="@dimen/padding_title"
        android:padding="@dimen/spacing_xs"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/title_size"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <!-- Email Input -->

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_background"
        android:hint="@string/your_email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/input_padding"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:textSize="@dimen/text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <!-- Reset Password Button -->

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:background="@drawable/login_button"
        android:text="@string/reset_password_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>